--- a/package.json
+++ b/package.json
@@ -1,7 +1,16 @@
 {
   "dependencies": {
-    "@google-cloud/functions-framework": "^3.0.0",
+    "@google-cloud/functions-framework": "^3.3.0",
     "mailgun-js": "^0.22.0"
   },
-  "type": "module"
+  "type": "module",
+  "main": "index.js",
+  "name": "serverless",
+  "description": "",
+  "version": "1.0.0",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC"
 }
